tests/ui/endpoint/non_custom_params_attribute.stderr
error: `params` can only be used on custom endpoints
 --> tests/ui/endpoint/non_custom_params_attribute.rs:8:12
  |
8 | #[read_all(params = true)]
  |            ^^^^^^

error[E0412]: cannot find type `read_all___gotham_restful_endpoint` in this scope
 --> tests/ui/endpoint/non_custom_params_attribute.rs:5:12
  |
5 | #[resource(read_all)]
  |            ^^^^^^^^ not found in this scope
  |
help: you might be missing a type parameter
  |
4 | #[derive(Resource<read_all___gotham_restful_endpoint>)]
  |                  ++++++++++++++++++++++++++++++++++++
